--- a/assets/css/arduino-style.css
+++ b/assets/css/arduino-style.css
@@ -1,27 +1,16 @@
-
-html, body {
-	background-color: #f7f7f7;
-	font-family: 'Lato', Calibri, Arial, sans-serif;
+  html, body {
+  background: url(../img/background.png) no-repeat;
+  background-size: cover;
+  font-family: 'Lato', Calibri, Arial, sans-serif;
 }
 .arduino-header {
 	margin: 20px 25px 3em;
 }
 .arduino-header img {
 	position: absolute;
+  background:;
 	width: 120px;
 	height: auto;
-}
-.arduino-header h5 {
-	position: absolute;
-	margin: 1.5em 2.5em;
-	font-size: 32px;
-	font-weight: 700;
-}
-.arduino-header span {
-	position: absolute;
-	margin: 4.3em 9em;
-	font-size: 17px;
-	font-weight: 600;
 }
 .arduino-body {
 	position: absolute;
@@ -34,7 +23,8 @@ html, body {
 }
 .arduino-body table {
 	width: 600px;
-	background-color: #ffffff;
+	background: url(img/layout.png) no-repeat;
+  background-size: cover;
 	box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
 }
 .arduino-switch {
