--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,8 +3,15 @@
 		width: 40px;
 		height: 40px;
 	}
+	.container-fluid .row .col-sm-8{
+		float: center;
+		margin:3px auto;
+	}
+	.container-fluid .row .col-sm-4{
+		margin-left: 7px;
+	}
 	.container-fluid h4 {
-		font-size: 23px;
+		font-size: 22px;
 	}
 	.logo i img{
 		width: 25px;
