--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 560px) {
 	h4 i img{
 		width: 40px;
 		height: 40px;
@@ -8,7 +8,7 @@
 		margin:3px auto;
 	}
 	.container-fluid .row .col-sm-4{
-		margin-left: 7px;
+		margin-left: 15px;
 	}
 	.container-fluid h4 {
 		font-size: 22px;
@@ -23,5 +23,16 @@
 	.col-sm-4{
 		font-size: 15px;
 	}
+	.container-fluid .form-inline .form-group{
+		margin:0 auto;
+		padding: 0px 5px;
+	}
 
+}
+
+@media (min-width: 561px) and (max-width: 650px) {
+	.container-fluid .form-inline .form-group{
+		margin:0 auto;
+		padding: 0px 10px;
+	}
 }
