--- a/assets/css/arduino-style.css
+++ b/assets/css/arduino-style.css
@@ -3,84 +3,31 @@
   background-size: cover;
   font-family: 'Lato', Calibri, Arial, sans-serif;
 }
-.arduino-header {
-	margin: 20px 25px 3em;
+.form-group{
+  margin: 0 auto;
 }
-.arduino-header img {
-	position: absolute;
-  background:;
-	width: 120px;
-	height: auto;
+.logo i img {
+  max-width: 50px;
+  max-height: 50px;
 }
-.arduino-body {
-	position: absolute;
-	margin: 12em -6em;
+.col-sm-4{
+  background-color: #1190e5;
 }
-.arduino-body .tbl-header {
-	margin-bottom: 15px;
-	font-size: 23px;
-	font-weight: 500;
+ .row{
+  font-size: 22px;
 }
-.arduino-body table {
-	width: 600px;
-	background: url(img/layout.png) no-repeat;
-  background-size: cover;
-	box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
-}
-.arduino-switch {
-    position: absolute;
-    margin-top: 9em;
-    left: 58%;
-    font-size: 20px;
-    font-weight: 500;
-}
-.arduino-switch table {
-	width: 400px;
-}
-.arduino-img img{
-  height: auto;
-  width: 300px;
-  float: right;
-  margin-top:180px;
-}
-.arduino-logo img{
-  height: 100px;
-  width: auto;
-  float: right;
-  margin: 20px -200px auto auto;
-}
-.arduino-switch {
-    position: absolute;
-    margin-top: 7.9em;
-    left: 58%;
-    font-size: 20px;
-    font-weight: 500;
-}
-.arduino-header {
-  margin-top: -40px;
-  padding: 0;
-}
-footer {
-  position: absolute;
-  top: 100%;
+footer{
+  background-color: #1190e5; 
+  bottom: 0;
   width: 100%;
-  height: 60px;
-  background-color: #f7f7f7;
-  color:#000;
-  line-height: 60px;
 }
-footer a {
-  color: #f4511e;
+.form-group{
+  margin:7px auto;
 }
-.footer-copyright {
-  border-top: 2px solid #DCDCDC;
-  background-color: #fff;
+h4 i img{
+  max-width: 70px;
+  max-height: 70px;
 }
-.switch label input[type=checkbox]:checked + .lever {
-  background-color: #A5D6A7;
-}
-
-.switch label input[type=checkbox]:checked + .lever:after {
-  background-color: #81C784;
-  left: 24px;
+h4{
+  font-size:35px; 
 }
